test/good/generics/return03.px

func f<A,B,C>(x: A): B*[C] def
    while x > 0 do
        return "abc", []
    return '@', [null]

print f(-1/2)
print f(3)
