test/bad/generics/type08.px

func f<A,B,C>(p: [A*B*C]): Void def
    return

f([(1, 2)])
